--- a/src/assets/style/_general.scss
+++ b/src/assets/style/_general.scss
@@ -1,7 +1,18 @@
 // General
 
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:wght@400;500&display=swap');
+
 *{
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+
+body{
+  @import "vars";
+  font-family: $main-font;
+}
+
+img{
+  max-width: 100%;
 }
