--- a/src/assets/style/_utils.scss
+++ b/src/assets/style/_utils.scss
@@ -1,6 +1,9 @@
 //Utilities
 
 .container{
+  display: flex;
+  height: 100%;
+  align-items: center;
   max-width: 1285px;
   width: 80%;
   margin: 0 auto;
