--- a/src/assets/style/_vars.scss
+++ b/src/assets/style/_vars.scss
@@ -1,2 +1,3 @@
 $main-font: 'Fira Sans Condensed', sans-serif;
+$secondary-font: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 $main-color: #0282f9;
